--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/FtpBrowserView.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/FtpBrowserView.xaml
@@ -1,48 +1,50 @@
 ﻿<inf:ModuleViewBase x:Class="Neurotoxin.Contour.Modules.FtpBrowser.Views.FtpBrowserView"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
                     xmlns:inf="clr-namespace:Neurotoxin.Contour.Presentation.Infrastructure;assembly=Neurotoxin.Contour.Presentation"
-                    xmlns:co="clr-namespace:Neurotoxin.Contour.Presentation.Converters;assembly=Neurotoxin.Contour.Presentation"
-                    xmlns:c="clr-namespace:Neurotoxin.Contour.Presentation.Controls;assembly=Neurotoxin.Contour.Presentation"
+                    xmlns:views="clr-namespace:Neurotoxin.Contour.Modules.FtpBrowser.Views"
+                    xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
                     MinHeight="300">
-    <inf:ModuleViewBase.Resources>
-        <co:BoolToVisibilityConverter x:Key="BoolToVis"/>
-    </inf:ModuleViewBase.Resources>
     
     <Grid x:Name="LayoutRoot">
-        <Grid x:Name="Content" Visibility="{Binding IsNotInProgress, Converter={StaticResource BoolToVis}}">
+        <Grid x:Name="Content">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="3"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <ListBox Grid.Row="1" Grid.Column="0" ItemsSource="{Binding LeftContent}" SelectedItem="{Binding LeftSelection}" HorizontalContentAlignment="Stretch">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="64"/>
-                                <ColumnDefinition/>
-                                <ColumnDefinition Width="Auto"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Image Source="{Binding Thumbnail}" Grid.RowSpan="2"/>
-                            <TextBlock Text="{Binding Title}" Grid.Column="1"/>
-                            <TextBlock Text="{Binding TitleId}" Grid.Column="2"/>
-                            <!--<TextBlock Text="{Binding Achievements}" Grid.Column="1" Grid.Row="1"/>
-                            <TextBlock Text="{Binding Gamerscore}" Grid.Column="2" Grid.Row="1"/>-->
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+            <views:PaneView Grid.Column="0" Grid.Row="1" DataContext="{Binding LocalFileSystem}"/>
+            <GridSplitter Grid.Column="1"/>
+            <views:PaneView Grid.Column="2" Grid.Row="1" DataContext="{Binding Ftp}"/>
+            
+            <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <Button Grid.Column="0" Content="F4 Edit" Command="{Binding EditCommand}"/>
+                <Button Grid.Column="1" Content="F5 Copy" Command="{Binding CopyCommand}"/>
+                <Button Grid.Column="2" Content="F6 Move" Command="{Binding MoveCommand}"/>
+                <Button Grid.Column="3" Content="F7 New Folder" Command="{Binding NewFolderCommand}"/>
+                <Button Grid.Column="4" Content="F8 Delete" Command="{Binding DeleteCommand}"/>
+            </Grid>
         </Grid>
+        <Grid.InputBindings>
+            <KeyBinding Command="{Binding EditCommand}" Key="F4"/>
+            <KeyBinding Command="{Binding CopyCommand}" Key="F5"/>
+            <KeyBinding Command="{Binding MoveCommand}" Key="F6"/>
+            <KeyBinding Command="{Binding NewFolderCommand}" Key="F7"/>
+            <KeyBinding Command="{Binding DeleteCommand}" Key="F8"/>
+        </Grid.InputBindings>
     </Grid>
 </inf:ModuleViewBase>
