--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/PaneView.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/PaneView.xaml
@@ -7,7 +7,8 @@
                     xmlns:views="clr-namespace:Neurotoxin.Contour.Modules.FtpBrowser.Views"
                     xmlns:co="clr-namespace:Neurotoxin.Contour.Presentation.Converters;assembly=Neurotoxin.Contour.Presentation"
                     xmlns:constants="clr-namespace:Neurotoxin.Contour.Modules.FtpBrowser.Constants"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib" 
+                    xmlns:system="clr-namespace:System;assembly=mscorlib"
+                    xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
                     MinHeight="300">
     <inf:ModuleViewBase.Resources>
         <converters:SizeConverter x:Key="SizeConverter"/>
@@ -15,13 +16,13 @@
         <converters:TitleConverter x:Key="TitleConverter"/>
         <converters:NameConverter x:Key="NameConverter"/>
         <converters:PaneHeaderBackgroundConverter x:Key="PaneHeaderBackgroundConverter"/>
-        <co:NotNullOrEmptyConverter x:Key="NotNullOrEmptyConverter"/>
 
         <inf:BindingProxy x:Key="ViewModel" Data="{Binding}"/>
         <constants:ToggleSelectionMode x:Key="Insert">Insert</constants:ToggleSelectionMode>
         <constants:ToggleSelectionMode x:Key="Space">Space</constants:ToggleSelectionMode>
         <constants:ToggleSelectionMode x:Key="ShiftDown">ShiftDown</constants:ToggleSelectionMode>
         <constants:ToggleSelectionMode x:Key="ShiftUp">ShiftUp</constants:ToggleSelectionMode>
+        <system:Boolean x:Key="False">False</system:Boolean>
         <system:Boolean x:Key="True">True</system:Boolean>
     </inf:ModuleViewBase.Resources>
 
@@ -92,7 +93,7 @@
                 </Style>
             </DataGrid.Resources>
             <DataGrid.Columns>
-                <DataGridTemplateColumn Header="Name" SortMemberPath="Title" Width="*" IsReadOnly="True">
+                <DataGridTemplateColumn Header="Name" SortMemberPath="ComputedName" Width="*" IsReadOnly="True">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Grid Background="Transparent">
@@ -256,6 +257,10 @@
                 <KeyBinding Command="{Binding ToggleSelectionCommand}" CommandParameter="{StaticResource ShiftUp}" Key="Up" Modifiers="Shift"/>
                 <KeyBinding Command="{Binding CalculateSizeCommand}" CommandParameter="{StaticResource True}" Key="L" Modifiers="Control"/>
                 <KeyBinding Command="{Binding SelectAllCommand}" Key="A" Modifiers="Control"/>
+                <KeyBinding Command="{Binding GoToFirstCommand}" CommandParameter="{StaticResource False}" Key="Home"/>
+                <KeyBinding Command="{Binding GoToFirstCommand}" CommandParameter="{StaticResource True}" Key="Home" Modifiers="Shift"/>
+                <KeyBinding Command="{Binding GoToLastCommand}" CommandParameter="{StaticResource False}" Key="End"/>
+                <KeyBinding Command="{Binding GoToLastCommand}" CommandParameter="{StaticResource True}" Key="End" Modifiers="Shift"/>
                 <KeyBinding Command="{Binding RenameCommand}" CommandParameter="{Binding ElementName=Grid}" Key="F6" Modifiers="Shift"/>
             </DataGrid.InputBindings>
         </DataGrid>
