--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/PaneView.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/PaneView.xaml
@@ -133,7 +133,7 @@
                         </DataTemplate>
                     </DataGridTemplateColumn.CellEditingTemplate>
                 </DataGridTemplateColumn>
-                <DataGridTextColumn Header="Size" SortMemberPath="Size" Width="80" IsReadOnly="True">
+                <DataGridTextColumn Header="Size" SortMemberPath="ComputedSize" Width="80" IsReadOnly="True">
                     <DataGridTextColumn.Binding>
                         <MultiBinding Converter="{StaticResource SizeConverter}">
                             <Binding Path="Type"/>
