--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/FtpBrowserView.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/FtpBrowserView.xaml
@@ -4,8 +4,8 @@
                     xmlns:inf="clr-namespace:Neurotoxin.Contour.Presentation.Infrastructure;assembly=Neurotoxin.Contour.Presentation"
                     xmlns:views="clr-namespace:Neurotoxin.Contour.Modules.FtpBrowser.Views"
                     xmlns:e="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+                    xmlns:co="clr-namespace:Neurotoxin.Contour.Presentation.Converters;assembly=Neurotoxin.Contour.Presentation"
                     MinHeight="300">
-    
     <Grid x:Name="LayoutRoot">
         <Grid x:Name="Content">
             <Grid.ColumnDefinitions>
@@ -14,16 +14,18 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             
-            <views:PaneView Grid.Column="0" Grid.Row="1" DataContext="{Binding LocalFileSystem}"/>
+            <views:PaneView Grid.Column="0" Grid.Row="0" DataContext="{Binding LocalFileSystem}"/>
             <GridSplitter Grid.Column="1"/>
-            <views:PaneView Grid.Column="2" Grid.Row="1" DataContext="{Binding Ftp}"/>
+            <views:StoredConnectionsView Grid.Column="2" Grid.Row="0" DataContext="{Binding StoredConnections}" 
+                                         Visibility="{Binding ElementName=Content, Path=DataContext.StoredConnectionsVisibility}"/>
+            <views:PaneView Grid.Column="2" Grid.Row="0" DataContext="{Binding Ftp}"
+                            Visibility="{Binding ElementName=Content, Path=DataContext.FtpVisibility}"/>
             
-            <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2">
+            <Grid Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
