--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/NewConnectionDialog.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/NewConnectionDialog.xaml
@@ -1,7 +1,6 @@
-﻿<Window x:Class="Neurotoxin.Contour.Modules.FtpBrowser.Views.ReconnectionDialog"
+﻿<Window x:Class="Neurotoxin.Contour.Modules.FtpBrowser.Views.NewConnectionDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:views="clr-namespace:Neurotoxin.Contour.Modules.FtpBrowser.Views"
         Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner">
     
     <Grid x:Name="LayoutRoot" Margin="5">
@@ -17,12 +16,5 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         
-        <TextBlock Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,10" Text="{Binding Path=ConnectionName, StringFormat={x:Static views:ReconnectionDialog.WarningMessageFormat}}" />
-
-        <TextBlock Grid.ColumnSpan="4" Grid.Row="1" Margin="5,0,0,5" Text="Do you want to reconnect?" />
-
-        <Button Grid.Column="1" Grid.Row="2" Content="Yes" Margin="5" x:Name="Reconnect" Click="ButtonClick"/>
-        <Button Grid.Column="2" Grid.Row="2" Content="No" Margin="5" x:Name="Cancel" Click="ButtonClick"/>
-
     </Grid>
 </Window>
