--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/Dialogs/ReadErrorDialog.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/Dialogs/ReadErrorDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Neurotoxin.Contour.Modules.FtpBrowser.Views.ReadErrorDialog"
+﻿<Window x:Class="Neurotoxin.Contour.Modules.FtpBrowser.Views.Dialogs.ReadErrorDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Width="450" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner">
