--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/Dialogs/WriteErrorDialog.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FtpBrowser/Views/Dialogs/WriteErrorDialog.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Neurotoxin.Contour.Modules.FtpBrowser.Views.WriteErrorDialog"
+﻿<Window x:Class="Neurotoxin.Contour.Modules.FtpBrowser.Views.Dialogs.WriteErrorDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner">
@@ -16,10 +16,14 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
-        <TextBlock x:Name="ErrorMessage" Grid.ColumnSpan="3" Grid.Row="0" Margin="5,5,5,10" TextWrapping="Wrap" />
 
-        <TextBlock Grid.ColumnSpan="3" Grid.Row="1" Margin="5,0,0,5" Text="What do you want to do?" />
+        <GroupBox Header="Overwrite:" Grid.ColumnSpan="3" Grid.Row="0" Margin="5,5,5,10">
+            <!-- TODO -->
+        </GroupBox>
+
+        <GroupBox Header="With this:" Grid.ColumnSpan="3" Grid.Row="1" Margin="5,0,0,5">
+            <!-- TODO -->
+        </GroupBox>
 
         <Button Grid.Column="0" Grid.Row="2" Content="Overwrite" Margin="5" x:Name="Overwrite" Click="ButtonClick"/>
         <Button Grid.Column="1" Grid.Row="2" Content="Overwrite all" Margin="5" x:Name="OverwriteAll" Click="ButtonClick"/>
