--- a/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/NewConnectionDialog.xaml
+++ b/Neurotoxin.Contour/Neurotoxin.Contour.Modules/FileManager/Views/Dialogs/NewConnectionDialog.xaml
@@ -2,9 +2,67 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:validation="clr-namespace:Neurotoxin.Contour.Presentation.Validation;assembly=Neurotoxin.Contour.Presentation"
-        Width="400" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner">
+        xmlns:converters="clr-namespace:Neurotoxin.Contour.Presentation.Converters;assembly=Neurotoxin.Contour.Presentation"
+        Width="320" Topmost="True" SizeToContent="Height" WindowStartupLocation="CenterOwner" Title="New connection...">
     <Window.Resources>
-        
+        <Style TargetType="TextBox" x:Key="TextBoxStyle">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="True">
+                    <Setter Property="Background" Value="Pink"/>
+                </Trigger>
+            </Style.Triggers>
+            <Setter Property="Validation.ErrorTemplate"> <!-- {StaticResource ErrorTemplateSilverlightStyle} -->
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Grid>
+                            <Border BorderThickness="1" BorderBrush="#FFdc000c" CornerRadius="0.7" VerticalAlignment="Top" x:Name="border">
+                                <Grid>
+                                    <Polygon x:Name="toolTipCorner"
+                                             Grid.ZIndex="2"
+                                             Margin="-1"
+                                             Points="6,6 6,0 0,0" 
+                                             Fill="#FFdc000c" 
+                                             HorizontalAlignment="Right" 
+                                             VerticalAlignment="Top"
+                                             IsHitTestVisible="True"/>
+                                    <Polyline Grid.ZIndex="3"
+                                              Points="7,7 0,0" Margin="-1" HorizontalAlignment="Right" 
+                                              StrokeThickness="1.5"
+                                              StrokeEndLineCap="Round"
+                                              StrokeStartLineCap="Round"
+                                              Stroke="White"
+                                              VerticalAlignment="Top"
+                                              IsHitTestVisible="True"/>
+                                    <AdornedElementPlaceholder x:Name="adorner"/>
+                                </Grid>
+                            </Border>
+                            <Popup x:Name="errorBorder" AllowsTransparency="True"
+                                    IsHitTestVisible="False" IsOpen="False" PlacementTarget="{Binding ElementName=border}" Placement="Right"
+                                    MinHeight="24" MaxWidth="400">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="1"/>
+                                        <ColumnDefinition Width="Auto"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Border Background="#FFdc000c" CornerRadius="1.5" Grid.Column="1">
+                                        <Border.Effect>
+                                            <DropShadowEffect ShadowDepth="2.25" Color="Black" Opacity="0.4" Direction="315" BlurRadius="4"/>
+                                        </Border.Effect>
+                                        <TextBlock Text="{Binding ElementName=adorner, Path=AdornedElement.(Validation.Errors)[0].ErrorContent}"
+                                           Foreground="White" Margin="8,3,8,3" TextTrimming="CharacterEllipsis"/>
+                                    </Border>
+                                </Grid>
+                            </Popup>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <DataTrigger Binding="{Binding ElementName=adorner, Path=AdornedElement.(Validation.HasError)}" Value="True">
+                                <Setter TargetName="errorBorder" Property="IsOpen" Value="True"/>
+                            </DataTrigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
     <Grid x:Name="LayoutRoot" Margin="5">
         <Grid.ColumnDefinitions>
@@ -22,7 +80,7 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row="0" Text="Connection name:" VerticalAlignment="Center" Margin="0,0,0,5"/>
-        <TextBox Grid.Column="1" Grid.Row="0" Margin="0,0,0,5">
+        <TextBox Grid.Column="1" Grid.Row="0" Margin="0,0,0,5" x:Name="Name" Style="{StaticResource TextBoxStyle}">
             <TextBox.Text>
                 <Binding Path="Name" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
@@ -32,7 +90,7 @@
             </TextBox.Text>
         </TextBox>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Text="Xbox Version:" VerticalAlignment="Center" Margin="0,0,0,5"/>
+        <TextBlock Grid.Column="0" Grid.Row="1" Text="Xbox version:" VerticalAlignment="Center" Margin="0,0,0,5"/>
         <ComboBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Margin="0,0,0,5" x:Name="Version">
             <ComboBoxItem Content="Xbox 360 (Fat/White)" Tag="fat" IsSelected="True"/>
             <ComboBoxItem Content="Xbox 360 Elite (Fat/Black)" Tag="fat_elite"/>
@@ -41,7 +99,7 @@
         </ComboBox>
 
         <TextBlock Grid.Column="0" Grid.Row="2" Text="Address:" VerticalAlignment="Center" Margin="0,0,0,5"/>
-        <TextBox Grid.Column="1" Grid.Row="2" Margin="0,0,0,5">
+        <TextBox Grid.Column="1" Grid.Row="2" Margin="0,0,0,5" x:Name="Address" Style="{StaticResource TextBoxStyle}">
             <TextBox.Text>
                 <Binding Path="Address" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
@@ -52,7 +110,7 @@
         </TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="3" Text="Port:" VerticalAlignment="Center" Margin="0,0,0,5"/>
-        <TextBox Grid.Column="1" Grid.Row="3" Margin="0,0,0,5">
+        <TextBox Grid.Column="1" Grid.Row="3" Margin="0,0,0,5" x:Name="Port" Style="{StaticResource TextBoxStyle}">
             <TextBox.Text>
                 <Binding Path="Port" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
@@ -63,7 +121,7 @@
         </TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="4" Text="Username:" VerticalAlignment="Center" Margin="0,0,0,5"/>
-        <TextBox Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="3" Margin="0,0,0,5">
+        <TextBox Grid.Column="1" Grid.Row="4" Margin="0,0,0,5" x:Name="Username" Style="{StaticResource TextBoxStyle}">
             <TextBox.Text>
                 <Binding Path="Username" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
@@ -74,7 +132,7 @@
         </TextBox>
 
         <TextBlock Grid.Column="0" Grid.Row="5" Text="Password:" VerticalAlignment="Center" Margin="0,0,0,15"/>
-        <TextBox Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" Margin="0,0,0,15">
+        <TextBox Grid.Column="1" Grid.Row="5" Grid.ColumnSpan="3" Margin="0,0,0,15" x:Name="Password" Style="{StaticResource TextBoxStyle}">
             <TextBox.Text>
                 <Binding Path="Password" UpdateSourceTrigger="LostFocus">
                     <Binding.ValidationRules>
